[gd_scene load_steps=2 format=3 uid="uid://dgj4n3i6g8v1t"]

[ext_resource type="Script" uid="uid://djrv6r7kv21uo" path="res://scripts/SingleRobotPosition.gd" id="1_position"]

[node name="SingleRobotPosition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_position")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.06, 1)

[node name="Header" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="Header"]
layout_mode = 0
offset_left = 660.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 70.0
text = "‚öîÔ∏è ESCOLHA SUA POSI√á√ÉO - COMBATE 1v2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Header"]
layout_mode = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 65.0
text = "üè† Voltar"

[node name="RobotInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 50.0
offset_top = 120.0
offset_right = 850.0
offset_bottom = 500.0

[node name="RobotPanel" type="Panel" parent="RobotInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RobotLabel" type="Label" parent="RobotInfo"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 360.0
text = "Informa√ß√µes do rob√¥ aparecer√£o aqui..."
autowrap_mode = 3

[node name="PositionChoice" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 900.0
offset_top = 120.0
offset_right = 1800.0
offset_bottom = 800.0

[node name="FrontOption" type="Control" parent="PositionChoice"]
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 850.0
offset_bottom = 300.0

[node name="FrontPanel" type="Panel" parent="PositionChoice/FrontOption"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FrontButton" type="Button" parent="PositionChoice/FrontOption"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "üõ°Ô∏è POSI√á√ÉO FRONT (TANQUE)
+10% Defesas | +10% Vida
Recebe ataques primeiro"

[node name="BackOption" type="Control" parent="PositionChoice"]
anchors_preset = 0
offset_left = 50.0
offset_top = 350.0
offset_right = 850.0
offset_bottom = 600.0

[node name="BackPanel" type="Panel" parent="PositionChoice/BackOption"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="PositionChoice/BackOption"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "‚öîÔ∏è POSI√á√ÉO BACK (DPS)
+10% Ataques
Protegido pela linha de frente"
